Update Java command examples to include --enable-preview